tests/rosetta/out/C/2048.error
cc: exit status 1
/tmp/2048.c: In function ‘spawnTile’:
/tmp/2048.c:164:12: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  164 |     return (tmp_item_t){.board = b, .full = 1};
      |            ^
/tmp/2048.c:173:10: error: incompatible types when returning type ‘tmp_item1_t’ but ‘int’ was expected
  173 |   return (tmp_item1_t){.board = b, .full = empty.len == 1};
      |          ^
/tmp/2048.c: In function ‘slideLeft’:
/tmp/2048.c:253:13: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  253 |       res = 0;
      |             ^
/tmp/2048.c:256:13: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  256 |       res = 0;
      |             ^
/tmp/2048.c:261:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  261 |     res = 0;
      |           ^
/tmp/2048.c:263:24: error: ‘tmp_item_t’ has no member named ‘row’
  263 |   return (tmp_item_t){.row = res, .gain = gain};
      |                        ^~~
/tmp/2048.c:263:30: error: incompatible types when initializing type ‘int’ using type ‘list_int’
  263 |   return (tmp_item_t){.row = res, .gain = gain};
      |                              ^~~
/tmp/2048.c:263:36: error: ‘tmp_item_t’ has no member named ‘gain’
  263 |   return (tmp_item_t){.row = res, .gain = gain};
      |                                    ^~~~
/tmp/2048.c: In function ‘moveLeft’:
/tmp/2048.c:271:16: error: request for member ‘data’ in something not a structure or union
  271 |     int new = r.data["row"];
      |                ^
/tmp/2048.c:272:22: error: request for member ‘data’ in something not a structure or union
  272 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:275:36: error: request for member ‘data’ in something not a structure or union
  275 |       if ((b.data[y].data[x] != new.data[x])) {
      |                                    ^
/tmp/2048.c:278:30: error: request for member ‘data’ in something not a structure or union
  278 |       b.data[y].data[x] = new.data[x];
      |                              ^
/tmp/2048.c:283:36: error: ‘tmp_item_t’ has no member named ‘score’
  283 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:283:52: error: ‘tmp_item_t’ has no member named ‘moved’
  283 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:283:60: warning: excess elements in struct initializer
  283 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:283:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:283:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  283 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘moveRight’:
/tmp/2048.c:292:12: error: request for member ‘data’ in something not a structure or union
  292 |     rev = r.data["row"];
      |            ^
/tmp/2048.c:293:22: error: request for member ‘data’ in something not a structure or union
  293 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:305:36: error: ‘tmp_item_t’ has no member named ‘score’
  305 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:305:52: error: ‘tmp_item_t’ has no member named ‘moved’
  305 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:305:60: warning: excess elements in struct initializer
  305 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:305:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:305:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  305 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘moveUp’:
/tmp/2048.c:336:16: error: request for member ‘data’ in something not a structure or union
  336 |     int new = r.data["row"];
      |                ^
/tmp/2048.c:337:22: error: request for member ‘data’ in something not a structure or union
  337 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:340:36: error: request for member ‘data’ in something not a structure or union
  340 |       if ((b.data[y].data[x] != new.data[y])) {
      |                                    ^
/tmp/2048.c:343:30: error: request for member ‘data’ in something not a structure or union
  343 |       b.data[y].data[x] = new.data[y];
      |                              ^
/tmp/2048.c:348:36: error: ‘tmp_item_t’ has no member named ‘score’
  348 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:348:52: error: ‘tmp_item_t’ has no member named ‘moved’
  348 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:348:60: warning: excess elements in struct initializer
  348 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:348:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:348:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  348 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘moveDown’:
/tmp/2048.c:357:12: error: request for member ‘data’ in something not a structure or union
  357 |     col = r.data["row"];
      |            ^
/tmp/2048.c:358:22: error: request for member ‘data’ in something not a structure or union
  358 |     score = score + r.data["gain"];
      |                      ^
/tmp/2048.c:370:36: error: ‘tmp_item_t’ has no member named ‘score’
  370 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                    ^~~~~
/tmp/2048.c:370:52: error: ‘tmp_item_t’ has no member named ‘moved’
  370 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                    ^~~~~
/tmp/2048.c:370:60: warning: excess elements in struct initializer
  370 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |                                                            ^~~~~
/tmp/2048.c:370:60: note: (near initialization for ‘(anonymous)’)
/tmp/2048.c:370:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  370 |   return (tmp_item_t){.board = b, .score = score, .moved = moved};
      |          ^
/tmp/2048.c: In function ‘_mochi_main’:
/tmp/2048.c:412:12: error: request for member ‘data’ in something not a structure or union
  412 |   board = r.data["board"];
      |            ^
/tmp/2048.c:413:15: error: request for member ‘data’ in something not a structure or union
  413 |   int full = r.data["full"];
      |               ^
/tmp/2048.c:415:12: error: request for member ‘data’ in something not a structure or union
  415 |   board = r.data["board"];
      |            ^
/tmp/2048.c:416:11: error: request for member ‘data’ in something not a structure or union
  416 |   full = r.data["full"];
      |           ^
/tmp/2048.c:424:16: error: request for member ‘data’ in something not a structure or union
  424 |       board = m.data["board"];
      |                ^
/tmp/2048.c:425:16: error: request for member ‘data’ in something not a structure or union
  425 |       score = m.data["score"];
      |                ^
/tmp/2048.c:426:16: error: request for member ‘data’ in something not a structure or union
  426 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:430:16: error: request for member ‘data’ in something not a structure or union
  430 |       board = m.data["board"];
      |                ^
/tmp/2048.c:431:16: error: request for member ‘data’ in something not a structure or union
  431 |       score = m.data["score"];
      |                ^
/tmp/2048.c:432:16: error: request for member ‘data’ in something not a structure or union
  432 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:436:16: error: request for member ‘data’ in something not a structure or union
  436 |       board = m.data["board"];
      |                ^
/tmp/2048.c:437:16: error: request for member ‘data’ in something not a structure or union
  437 |       score = m.data["score"];
      |                ^
/tmp/2048.c:438:16: error: request for member ‘data’ in something not a structure or union
  438 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:442:16: error: request for member ‘data’ in something not a structure or union
  442 |       board = m.data["board"];
      |                ^
/tmp/2048.c:443:16: error: request for member ‘data’ in something not a structure or union
  443 |       score = m.data["score"];
      |                ^
/tmp/2048.c:444:16: error: request for member ‘data’ in something not a structure or union
  444 |       moved = m.data["moved"];
      |                ^
/tmp/2048.c:451:17: error: request for member ‘data’ in something not a structure or union
  451 |       board = r2.data["board"];
      |                 ^
/tmp/2048.c:452:16: error: request for member ‘data’ in something not a structure or union
  452 |       full = r2.data["full"];
      |                ^
