tests/rosetta/out/C/2048.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:42Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:42Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_list_int concat_list_list_int(list_list_int a, list_list_int b) {
  list_list_int r = list_list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_input() {
  char buf[1024];
  if (!fgets(buf, sizeof(buf), stdin))
    return strdup("");
  size_t len = strlen(buf);
  if (len > 0 && buf[len - 1] == '\n')
    buf[len - 1] = '\0';
  return strdup(buf);
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static int SIZE = 4;
static int score = 0;

typedef struct {
  list_list_int board;
  int full;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  list_list_int board;
  int full;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

list_list_int newBoard() {
  list_list_int b = {0, NULL};
  int y = 0;
  while (y < SIZE) {
    list_int row = list_int_create(0);
    int x = 0;
    while (x < SIZE) {
      int tmp1_data[1];
      list_int tmp1 = {1, tmp1_data};
      tmp1.data[0] = 0;
      list_int tmp2 = concat_list_int(row, tmp1);
      row = tmp2;
      x = x + 1;
    }
    list_list_int tmp3 = list_list_int_create(1);
    tmp3.data[0] = row;
    list_list_int tmp4 = concat_list_list_int(b, tmp3);
    b = tmp4;
    y = y + 1;
  }
  return b;
}

int spawnTile(list_list_int b) {
  list_list_int empty = {0, NULL};
  int y = 0;
  while (y < SIZE) {
    int x = 0;
    while (x < SIZE) {
      if (b.data[y].data[x] == 0) {
        list_int tmp5 = list_int_create(2);
        tmp5.data[0] = x;
        tmp5.data[1] = y;
        list_list_int tmp6 = list_list_int_create(1);
        tmp6.data[0] = tmp5;
        list_list_int tmp7 = concat_list_list_int(empty, tmp6);
        empty = tmp7;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  if (empty.len == 0) {
    return (tmp_item_t){.board = b, .full = 1};
  }
  int idx = _now() % empty.len;
  list_int cell = empty.data[idx];
  int val = 4;
  if (_now() % 10 < 9) {
    val = 2;
  }
  b.data[cell.data[1]].data[cell.data[0]] = val;
  return (tmp_item1_t){.board = b, .full = empty.len == 1};
}

char *pad(int n) {
  char *tmp8 = _str(n);
  char *s = tmp8;
  int pad = 4 - strlen(s);
  int i = 0;
  char *out = "";
  while (i < pad) {
    char *tmp9 = concat_string(out, " ");
    out = tmp9;
    i = i + 1;
  }
  char *tmp10 = concat_string(out, s);
  return tmp10;
}

int draw(list_list_int b, int score) {
  char *tmp11 = _str(score);
  char *tmp12 = concat_string("Score: ", tmp11);
  printf("%s\n", tmp12);
  int y = 0;
  while (y < SIZE) {
    printf("+----+----+----+----+\n");
    char *line = "|";
    int x = 0;
    while (x < SIZE) {
      int v = b.data[y].data[x];
      if (v == 0) {
        char *tmp13 = concat_string(line, "    |");
        line = tmp13;
      } else {
        char *tmp14 = concat_string(line, pad(v));
        char *tmp15 = concat_string(tmp14, "|");
        line = tmp15;
      }
      x = x + 1;
    }
    printf("%s\n", line);
    y = y + 1;
  }
  printf("+----+----+----+----+\n");
  printf("W=Up S=Down A=Left D=Right Q=Quit\n");
}

list_int reverseRow(list_int r) {
  list_int out = list_int_create(0);
  int i = r.len - 1;
  while (i >= 0) {
    int tmp16_data[1];
    list_int tmp16 = {1, tmp16_data};
    tmp16.data[0] = r.data[i];
    list_int tmp17 = concat_list_int(out, tmp16);
    out = tmp17;
    i = i - 1;
  }
  return out;
}

int slideLeft(list_int row) {
  list_int xs = list_int_create(0);
  int i = 0;
  while (i < row.len) {
    if (row.data[i] != 0) {
      int tmp18_data[1];
      list_int tmp18 = {1, tmp18_data};
      tmp18.data[0] = row.data[i];
      list_int tmp19 = concat_list_int(xs, tmp18);
      xs = tmp19;
    }
    i = i + 1;
  }
  list_int res = list_int_create(0);
  int gain = 0;
  i = 0;
  while (i < xs.len) {
    if (i + 1 < xs.len && xs.data[i] == xs.data[i + 1]) {
      int v = xs.data[i] * 2;
      gain = gain + v;
      res = 0;
      i = i + 2;
    } else {
      res = 0;
      i = i + 1;
    }
  }
  while (res.len < SIZE) {
    res = 0;
  }
  return (tmp_item_t){.row = res, .gain = gain};
}

int moveLeft(list_list_int b, int score) {
  int moved = 0;
  int y = 0;
  while (y < SIZE) {
    int r = slideLeft(b.data[y]);
    int new = r.data["row"];
    score = score + r.data["gain"];
    int x = 0;
    while (x < SIZE) {
      if ((b.data[y].data[x] != new.data[x])) {
        moved = 1;
      }
      b.data[y].data[x] = new.data[x];
      x = x + 1;
    }
    y = y + 1;
  }
  return (tmp_item_t){.board = b, .score = score, .moved = moved};
}

int moveRight(list_list_int b, int score) {
  int moved = 0;
  int y = 0;
  while (y < SIZE) {
    list_int rev = reverseRow(b.data[y]);
    int r = slideLeft(rev);
    rev = r.data["row"];
    score = score + r.data["gain"];
    rev = reverseRow(rev);
    int x = 0;
    while (x < SIZE) {
      if (b.data[y].data[x] != rev.data[x]) {
        moved = 1;
      }
      b.data[y].data[x] = rev.data[x];
      x = x + 1;
    }
    y = y + 1;
  }
  return (tmp_item_t){.board = b, .score = score, .moved = moved};
}

list_int getCol(list_list_int b, int x) {
  list_int col = list_int_create(0);
  int y = 0;
  while (y < SIZE) {
    int tmp20_data[1];
    list_int tmp20 = {1, tmp20_data};
    tmp20.data[0] = b.data[y].data[x];
    list_int tmp21 = concat_list_int(col, tmp20);
    col = tmp21;
    y = y + 1;
  }
  return col;
}

int setCol(list_list_int b, int x, list_int col) {
  int y = 0;
  while (y < SIZE) {
    b.data[y].data[x] = col.data[y];
    y = y + 1;
  }
}

int moveUp(list_list_int b, int score) {
  int moved = 0;
  int x = 0;
  while (x < SIZE) {
    list_int col = getCol(b, x);
    int r = slideLeft(col);
    int new = r.data["row"];
    score = score + r.data["gain"];
    int y = 0;
    while (y < SIZE) {
      if ((b.data[y].data[x] != new.data[y])) {
        moved = 1;
      }
      b.data[y].data[x] = new.data[y];
      y = y + 1;
    }
    x = x + 1;
  }
  return (tmp_item_t){.board = b, .score = score, .moved = moved};
}

int moveDown(list_list_int b, int score) {
  int moved = 0;
  int x = 0;
  while (x < SIZE) {
    list_int col = reverseRow(getCol(b, x));
    int r = slideLeft(col);
    col = r.data["row"];
    score = score + r.data["gain"];
    col = reverseRow(col);
    int y = 0;
    while (y < SIZE) {
      if (b.data[y].data[x] != col.data[y]) {
        moved = 1;
      }
      b.data[y].data[x] = col.data[y];
      y = y + 1;
    }
    x = x + 1;
  }
  return (tmp_item_t){.board = b, .score = score, .moved = moved};
}

int hasMoves(list_list_int b) {
  int y = 0;
  while (y < SIZE) {
    int x = 0;
    while (x < SIZE) {
      if (b.data[y].data[x] == 0) {
        return 1;
      }
      if (x + 1 < SIZE && b.data[y].data[x] == b.data[y].data[x + 1]) {
        return 1;
      }
      if (y + 1 < SIZE && b.data[y].data[x] == b.data[y + 1].data[x]) {
        return 1;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  return 0;
}

int has2048(list_list_int b) {
  int y = 0;
  while (y < SIZE) {
    int x = 0;
    while (x < SIZE) {
      if (b.data[y].data[x] >= 2048) {
        return 1;
      }
      x = x + 1;
    }
    y = y + 1;
  }
  return 0;
}

int _mochi_main() {
  list_list_int board = newBoard();
  int r = spawnTile(board);
  board = r.data["board"];
  int full = r.data["full"];
  r = spawnTile(board);
  board = r.data["board"];
  full = r.data["full"];
  draw(board, score);
  while (1) {
    printf("Move: \n");
    char *cmd = _input();
    int moved = 0;
    if ((strcmp(cmd, "a") == 0) || cmd == "A") {
      int m = moveLeft(board, score);
      board = m.data["board"];
      score = m.data["score"];
      moved = m.data["moved"];
    }
    if ((strcmp(cmd, "d") == 0) || cmd == "D") {
      int m = moveRight(board, score);
      board = m.data["board"];
      score = m.data["score"];
      moved = m.data["moved"];
    }
    if ((strcmp(cmd, "w") == 0) || cmd == "W") {
      int m = moveUp(board, score);
      board = m.data["board"];
      score = m.data["score"];
      moved = m.data["moved"];
    }
    if ((strcmp(cmd, "s") == 0) || cmd == "S") {
      int m = moveDown(board, score);
      board = m.data["board"];
      score = m.data["score"];
      moved = m.data["moved"];
    }
    if ((strcmp(cmd, "q") == 0) || cmd == "Q") {
      break;
    }
    if (moved) {
      int r2 = spawnTile(board);
      board = r2.data["board"];
      full = r2.data["full"];
      if ((full && ((!hasMoves(board))))) {
        draw(board, score);
        printf("Game Over\n");
        break;
      }
    }
    draw(board, score);
    if (has2048(board)) {
      printf("You win!\n");
      break;
    }
    if ((!hasMoves(board))) {
      printf("Game Over\n");
      break;
    }
  }
  return 0;
}
int main() { return _mochi_main(); }
